cmake_minimum_required(VERSION 3.10)
project(mmlog)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
get_property(TARGETS DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY BUILDSYSTEM_TARGETS)
add_subdirectory(third_party/googletest)
add_subdirectory(logcore)
add_subdirectory(test_logcore)
